Gitlab CI/CD Pipeline Variable 설정 작성

--- a/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
+++ b/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
@@ -23,7 +23,7 @@ image: /assets/img/post-title/devops.jpg
 
 * * *
 
-# 2. Gitlab Repo 생성 및 파일 구조 생성하기:
+# 2. Gitlab Repo 생성 및 파일 구조 생성하기 :
 ## 2.1 Gitlab CI 파일 구조 :
 
 - 파일 구조는 아래와 같습니다.
@@ -60,7 +60,7 @@ DEV-TEST/
     <mirror>
       <id>nexus</id>
       <name>nexus-mirror</name>
-      <url>${env.NEXUS_MIRROR_URL}</url>
+      <url>${NEXUS_MIRROR_URL}</url>
       <mirrorOf>*</mirrorOf>
     </mirror>
   </mirrors>
@@ -291,5 +291,28 @@ ENTRYPOINT ["java","-jar","/app/app.jar"]
   </build>
 </project>
 ```
+
+* * *
+
+# 3. Gitlab CI/CD Pipeline Variable 설정하기 :
+
+- gitlab pipeline 실행 시 사용하는 변수 값을 저장합니다.
+
+> 변수 저장 경로 : ***CI_REPO > Settings > CI/CD > Variables***
+{: .prompt-tip}
+
+|        Key          |  Value  |  설명   |
+|:-------------------:|:-------:|:---------------:|
+| CI_CA_CERT          | ```pem<br>-----BEGIN CERTIFICATE-----<br>MIIFhzCC...<br>-----END CERTIFICATE-----``` | <ROOT_CA.CRT> |
+| HARBOR_PASS         | qwe1212!Q         | <HARBOR_PASSWORD>     |
+| HARBOR_PROJECT      | pipeline          | <HARBOR_PROJECT_NAME> |
+| HARBOR_REGISTRY     | harbor.test.com   | <HARBOR_URL>          |
+| HARBOR_USER         | admin             | <HARBOR_USERNAME>     |
+| MANIFEST_REPO_PATH  | test/dev-manifest | <GITLAB_MANIFEST_REPO_PATH>    |
+| MANIFEST_REPO_TOKEN | glpat-gQ4KNJFzkySysYzmemZi8m86MQp1OjcH.01.0w1p0y1sd | <GITLAB_ACCESS_TOKEN> |
+| MANIFEST_REPO_URL   | gitlab.test.com   | <GITLAB_URL>          |
+| MANIFEST_REPO_USER  | root | <GITLAB_USERNAME>     |
+| NEXUS_MIRROR_URL    | nexus.test.com | <NEXUS_REPO_URL>      |
+
 
 * * *
