--- a/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
+++ b/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
@@ -12,7 +12,7 @@ image: /assets/img/post-title/devops.jpg
 
 * * *
 
-# 1. CI 환경 구성하기 :
+## 1. CI 환경 구성하기 :
 - 아래 URL 접속하여 CI 환경을 구성합니다.
 > * [Gitlab 설치하기](https://hwangyoonjae.github.io/posts/Helm-Helm-Chart%EB%A5%BC-%ED%86%B5%ED%95%B4-Gitlab-%EC%84%A4%EC%B9%98%ED%95%98%EA%B8%B0/ "Gitlab 설치하기")
 > * [Runner 설치하기](https://hwangyoonjae.github.io/posts/Helm-Helm-Chart%EB%A5%BC-%ED%86%B5%ED%95%B4-Gitlab-Runner-%EC%84%A4%EC%B9%98%ED%95%98%EA%B8%B0/ "Runner 설치하기")
@@ -23,8 +23,8 @@ image: /assets/img/post-title/devops.jpg
 
 * * *
 
-# 2. Gitlab Repo 생성 및 파일 구조 생성하기 :
-## 2.1 Gitlab CI 파일 구조 :
+## 2. Gitlab Repo 생성 및 파일 구조 생성하기 :
+### 2.1 Gitlab CI 파일 구조 :
 
 - 파일 구조는 아래와 같습니다.
 
@@ -48,7 +48,7 @@ DEV-TEST/
 
 * * *
 
-## 2.2 Gitlab CI 파일 상세 내용 :
+### 2.2 Gitlab CI 파일 상세 내용 :
 
 ```xml
 # settings.xml
@@ -294,7 +294,7 @@ ENTRYPOINT ["java","-jar","/app/app.jar"]
 
 * * *
 
-# 3. Gitlab CI/CD Pipeline Variable 설정하기 :
+## 3. Gitlab CI/CD Pipeline Variable 설정하기 :
 
 - gitlab pipeline 실행 시 사용하는 변수 값을 저장합니다.
 
@@ -313,6 +313,5 @@ ENTRYPOINT ["java","-jar","/app/app.jar"]
 | MANIFEST_REPO_URL   | gitlab.test.com   | <GITLAB_URL>          |
 | MANIFEST_REPO_USER  | root | <GITLAB_USERNAME>     |
 | NEXUS_MIRROR_URL    | nexus.test.com | <NEXUS_REPO_URL>      |
-
 
 * * *
