ROOT_CA.CRT에서 <> 제거

--- a/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
+++ b/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
@@ -303,7 +303,7 @@ ENTRYPOINT ["java","-jar","/app/app.jar"]
 
 |        Key          |  Value  |  설명   |
 |:-------------------:|:-------:|:---------------:|
-| CI_CA_CERT          | `-----BEGIN CERTIFICATE-----`<br>`MIIFhzCC...`<br>`-----END CERTIFICATE-----` | <ROOT_CA.CRT> |
+| CI_CA_CERT          | `-----BEGIN CERTIFICATE-----`<br>`MIIFhzCC...`<br>`-----END CERTIFICATE-----` | ROOT_CA.CRT |
 | HARBOR_PASS         | qwe1212!Q         | HARBOR_PASSWORD     |
 | HARBOR_PROJECT      | pipeline          | HARBOR_PROJECT_NAME |
 | HARBOR_REGISTRY     | harbor.test.com   | HARBOR_URL          |
