주석처리 수정

--- a/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
+++ b/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
@@ -51,7 +51,6 @@ DEV-TEST/
 ### 2.2 Gitlab CI 파일 상세 내용 :
 
 ```xml
-# settings.xml
 <!-- ci/settings.xml -->
 <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -81,7 +80,7 @@ DEV-TEST/
 * * *
 
 ```java
-# HelloController.java
+// HelloController.java
 package com.example.webdemo;
 
 import org.springframework.web.bind.annotation.GetMapping;
@@ -97,7 +96,7 @@ public class HelloController {
 ```
 
 ```java
-# WebDemoApplication.java
+// WebDemoApplication.java
 package com.example.webdemo;
 
 import org.springframework.boot.SpringApplication;
