CI 환경 구성별 파일 용도 작성 및 깃랩 파이프라인 환경변수 등록 캡처본 적용

--- a/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
+++ b/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
@@ -50,6 +50,8 @@ DEV-TEST/
 
 ### 2.2 Gitlab CI 파일 상세 내용 :
 
+- CI/CD 환경에서 Maven 빌드를 수행할 때 사용하는 설정 파일로 주로 폐쇄망 또는 내부 저장소 환경에서 의존성 다운로드를 위해 사용합니다.
+
 ```xml
 <!-- ci/settings.xml -->
 <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
@@ -78,6 +80,8 @@ DEV-TEST/
 ```
 
 * * *
+
+- Spring Boot 애플리케이션 실행 진입점 파일과 웹 요청을 처리하는 컨트롤러 클래스 파일을 생성합니다.
 
 ```java
 // HelloController.java
@@ -111,6 +115,8 @@ public class WebDemoApplication {
 ```
 
 * * *
+
+- GitLab CI/CD 파이프라인을 정의하는 설정 파일로, 소스 코드 빌드, 테스트, Docker 이미지 생성 및 배포 등의 자동화 작업 흐름을 단계별로 정의합니다.
 
 ```yaml
 # .gitlab-ci.yml
@@ -213,6 +219,8 @@ update-manifest:
 
 * * *
 
+- Spring Boot 애플리케이션을 컨테이너 이미지로 빌드하기 위한 설정 파일을 생성합니다.
+
 ```bash
 # Dockerfile
 # ===== Build stage =====
@@ -250,6 +258,8 @@ ENTRYPOINT ["java","-jar","/app/app.jar"]
 ```
 
 * * *
+
+- 프로젝트의 기본 정보와 의존성, 빌드 방식을 정의하는 Maven 설정 파일을 작성합니다.
 
 ```xml
 # pom.xml
@@ -312,5 +322,8 @@ ENTRYPOINT ["java","-jar","/app/app.jar"]
 | MANIFEST_REPO_URL   | gitlab.test.com   | GITLAB_URL          |
 | MANIFEST_REPO_USER  | root | GITLAB_USERNAME     |
 | NEXUS_MIRROR_URL    | nexus.test.com | NEXUS_REPO_URL      |
+
+![CI 파이프라인 환경변수 등록 1](/assets/img/post/devops/CI%20파이프라인%20환경변수%20등록%201.png)
+![CI 파이프라인 환경변수 등록 2](/assets/img/post/devops/CI%20파이프라인%20환경변수%20등록%202.png)
 
 * * *
