Pipeline 실행한 화면 추가

--- a/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
+++ b/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
@@ -327,3 +327,11 @@ ENTRYPOINT ["java","-jar","/app/app.jar"]
 ![CI 파이프라인 환경변수 등록 2](/assets/img/post/devops/CI%20파이프라인%20환경변수%20등록%202.png)
 
 * * *
+
+## 4. Pipeline 실행하기 :
+
+- 위 파일 구성 및 환경변수 등록이 완료되었다면, 파이프라인을 실행합니다.
+
+![CI 파이프라인 적용 화면](/assets/img/post/devops/CI%20파이프라인%20적용%20화면.png)
+
+* * *
