canary 배포 게시글 추가 및 해당 게시글에서 사용한 배포 방식 표기

--- a/_posts/DevOps/2026-01-06-[Devops] - CD 환경 구성하기.md
+++ b/_posts/DevOps/2026-01-06-[Devops] - CD 환경 구성하기.md
@@ -17,9 +17,9 @@ image: /assets/img/post-title/devops.jpg
 > * [ArgoCD 설치하기](https://hwangyoonjae.github.io/posts/Helm-Helm-Chart%EB%A5%BC-%ED%86%B5%ED%95%B4-ArgoCD-%EC%84%A4%EC%B9%98%ED%95%98%EA%B8%B0/ "ArgoCD 설치하기")
 > * [ArgoCD Webhook 설정하기](https://hwangyoonjae.github.io/posts/ArgoCD-ArgoCD-Webhook-%EC%84%A4%EC%A0%95/ "ArgoCD Webhook 설정하기")
 > * [ArgoCD Blue-Green 배포하기](https://hwangyoonjae.github.io/posts/ArgoCD-ArgoCD-Blue-Green-%EB%B0%B0%ED%8F%AC/ "ArgoCD Blue-Green 배포하기")
-> 
+> * [ArgoCD Canary 배포하기](https://hwangyoonjae.github.io/posts/ArgoCD-ArgoCD-Carany-%EB%B0%B0%ED%8F%AC/ "ArgoCD Canary 배포하기")
 
-> 필자는 ArgoCD 설치 시 Helm Chart를 이용하여 진행하였습니다.
+> 필자는 ArgoCD 설치 시 Helm Chart를 이용하여 진행하였고, 배포 방식은 Blue-Green으로 배포 하였습니다.
 {: .prompt-warning}
 
 * * *
