게시물 존칭으로 변경

--- a/_posts/API/2022-08-19-[API] - API란.md
+++ b/_posts/API/2022-08-19-[API] - API란.md
@@ -10,7 +10,7 @@ image: /assets/img/post-title/api-wallpaper.jpg
 ## 1. API란? :
 - Application Programing Interface에 약자로, 응용 프로그램에서 사용할 수 있도록 운영 체제나 프로그래밍 언어가 제공하는 기능을 제어할 수 있게 만든 인터페이스다.
 
-> 인터페이스란? : 서로 다른 두 개의 시스템, 장치 사이에서 정보나 신호를 주고받는 경우의 접점이나 경계면이다.
+> 인터페이스란? : 서로 다른 두 개의 시스템, 장치 사이에서 정보나 신호를 주고받는 경우의 접점이나 경계면입니다.
 {: .prompt-info}
 
 * * *
@@ -44,7 +44,7 @@ image: /assets/img/post-title/api-wallpaper.jpg
 ### 1.4 API 단점 :
 1. 표준이 존재하지 않는다.
 2. 사용할 수 있는 메소드가 4가지 밖에 없다.
-3. HTTP Method 형태가 제한적이다.
+3. HTTP Method 형태가 제한적입니다.
 4. 브라우저를 통해 테스트할 일이 많은 서비스라면 쉽게 고칠 수 있는 URL 보다 Header값이 왠지 더 어렵게 느껴진다.
 5. 구형 브라우저가 아직 제대로 지원해주지 못하는 부분이 존재합니다.
 6. PUT, DELETE를 사용하지 못합니다.
