--- a/_posts/Algorithm/2023-02-28-[알고리즘] - sha256이란.md
+++ b/_posts/Algorithm/2023-02-28-[알고리즘] - sha256이란.md
@@ -8,12 +8,12 @@ image: /assets/img/post-title/algorithm-wallpaper.jpg
 ---
 
 ## 1. sha256을 알고싶었던 계기:
-- SI사업 지원을 하면서 사용자 패스워드 암호화를 sha256 방식으로 진행하여 왜 많은 암호화 방식 중에서 sha256를 사용하는지 궁금해서다.
+- SI사업 지원을 하면서 사용자 패스워드 암호화를 sha256 방식으로 진행하여 왜 많은 암호화 방식 중에서 sha256를 사용하는지 궁금해서입니다.
 
 * * *
 
 ## 2. 암호화란?:
-- 코딩된 알고리즘, 해시, 서명 사용을 통해 정보를 보호하는 방식이다.
+- 코딩된 알고리즘, 해시, 서명 사용을 통해 정보를 보호하는 방식입니다.
 
 * * *
 
@@ -27,7 +27,7 @@ image: /assets/img/post-title/algorithm-wallpaper.jpg
 
 ## 4. sha256이란?:
 - SHA 알고리즘의 한 종류로써 256비트로 구성되며 64자리 문자열을 반환합니다.
-- 단방향 암호화 방식이기 때문에 복호화가 불가능 하다는 것이 큰 특징이다.
+- 단방향 암호화 방식이기 때문에 복호화가 불가능 하다는 것이 큰 특징입니다.
 
 * * *
 
