--- a/_posts/DB/2022-12-06-[DB] - 서브쿼리란.md
+++ b/_posts/DB/2022-12-06-[DB] - 서브쿼리란.md
@@ -8,7 +8,7 @@ image: /assets/img/post-title/db-wallpaper.jpg
 ---
 
 ## 1. 서브쿼리란? :
-- 하나의 SQL 문에 포함되어 있는 또 다른 SQL문이다.
+- 하나의 SQL 문에 포함되어 있는 또 다른 SQL문입니다.
 - 가장 일반적으로는 WHERE절에서 사용하고, 위치에 따라 SELECT, FROM, WHERE절에서 사용합니다.
 
 * * *
@@ -24,7 +24,7 @@ SELECT column1,
 FROM tableA
 WHERE tableA.column1 = 'name';
 ```
-- SELECT절 서브쿼리는 데이터의 양이 많을수록 실행속도가 느려지기 때문에 거의 사용되지 않는 명령어이다.
+- SELECT절 서브쿼리는 데이터의 양이 많을수록 실행속도가 느려지기 때문에 거의 사용되지 않는 명령어입니다.
 
 * * *
 
