--- a/_posts/DB/2023-03-11-[DB] - DB데이터 문자열 자르기.md
+++ b/_posts/DB/2023-03-11-[DB] - DB데이터 문자열 자르기.md
@@ -8,17 +8,17 @@ image: /assets/img/post-title/db-wallpaper.jpg
 ---
 
 ## 1. DB데이터 문자열 자르기를 알고 싶었던 계기 :
-- 고객사 인사연동 DB의 사용자 패스워드가 sha256 방식에서 데이터앞에 특수문자를 적용하였다. BASE64 인코딩 방식 적용 후 맨앞에 특수문자를 2개를 추가하였기 때문에 인사연동 진행 시 변경된 특수문자 2개를 지우고 가져와야하기 때문이다.
+- 고객사 인사연동 DB의 사용자 패스워드가 sha256 방식에서 데이터앞에 특수문자를 적용하였다. BASE64 인코딩 방식 적용 후 맨앞에 특수문자를 2개를 추가하였기 때문에 인사연동 진행 시 변경된 특수문자 2개를 지우고 가져와야하기 때문입니다.
 
 * * *
 
 ## 2. SUBSTR이란? :
-- 일정 문자열에서 선택한 길이 만큼만 잘라 가져올 있는 함수이다.
+- 일정 문자열에서 선택한 길이 만큼만 잘라 가져올 있는 함수입니다.
 
 * * *
 
 ## 3. SUBSTR 사용법 :
-- 아래 쿼리문은 앞에서부터 문자열 자르기이다.
+- 아래 쿼리문은 앞에서부터 문자열 자르기입니다.
 
 ```sql
 SELECT
