--- a/_posts/Helm/2024-02-14-[Helm] - Helm이란.md
+++ b/_posts/Helm/2024-02-14-[Helm] - Helm이란.md
@@ -8,14 +8,14 @@ image: /assets/img/post-title/helm-wallpaper.jpg
 ---
 
 ## 1. Helm이란? :
-- 쿠버네티스 오픈 소스 패키지 매니저이다.
-- ubuntu의 ***apt***, Mac의 ***brew***, Node의 ***npm***과 같이 패키지를 설치, 업데이트, 수정, 삭제하는 작업을 편리하고 안전하게 수행하기 위해 사용되는 툴이다.
+- 쿠버네티스 오픈 소스 패키지 매니저입니다.
+- ubuntu의 ***apt***, Mac의 ***brew***, Node의 ***npm***과 같이 패키지를 설치, 업데이트, 수정, 삭제하는 작업을 편리하고 안전하게 수행하기 위해 사용되는 툴입니다.
 
 * * *
 
 ## 2. Helm의 주요 개념 3가지 :
 - ***Chart(차트)*** : 헬름 패키지로, k8s cluster에서 애플리케이션이 기동되기 위해 필요한 모든 리소스들이 포함되어있습니다.
-- ***Repository(저장소)*** : 차트 저장소로, 차트를 모아두고 공유하는 장소이다.
+- ***Repository(저장소)*** : 차트 저장소로, 차트를 모아두고 공유하는 장소입니다.
 - ***Realease(릴리즈)*** : k8s cluster에서 구동되는 차트 인스턴스
 
 ```html
