--- a/_posts/Linux/2022-10-20-[Linux] - rc.local이란.md
+++ b/_posts/Linux/2022-10-20-[Linux] - rc.local이란.md
@@ -8,7 +8,7 @@ image: /assets/img/post-title/linux-wallpaper.jpg
 ---
 
 ## 1. rc.local이란? :
-- 부팅시 자동실행 명령어 스크립트 수행하며 일반적으로 서버 부팅시마다 매번 자동 실행되길 원하는 명령어를 넣어주는 곳이다.
+- 부팅시 자동실행 명령어 스크립트 수행하며 일반적으로 서버 부팅시마다 매번 자동 실행되길 원하는 명령어를 넣어주는 곳입니다.
 
 * * *
 
