--- a/_posts/DB/2023-03-09-[DB] - DB데이터 특정 문자열 바꾸기.md
+++ b/_posts/DB/2023-03-09-[DB] - DB데이터 특정 문자열 바꾸기.md
@@ -8,12 +8,12 @@ image: /assets/img/post-title/db-wallpaper.jpg
 ---
 
 ## 1. DB데이터 특정 문자열 바꾸기를 알고 싶었던 계기 :
-- 고객사 인사연동 DB의 사용자 패스워드가 sha256 방식에서 데이터앞에 특수문자를 적용하였다. BASE64 인코딩 방식에서 특수문자를 치환하여 적용되어있어 인사연동 진행 시 변경된 특수문자를 치환해야하기 때문이다.
+- 고객사 인사연동 DB의 사용자 패스워드가 sha256 방식에서 데이터앞에 특수문자를 적용하였다. BASE64 인코딩 방식에서 특수문자를 치환하여 적용되어있어 인사연동 진행 시 변경된 특수문자를 치환해야하기 때문입니다.
 
 * * *
 
 ## 2. REPLACE란? :
-- 특정 문자열을 찾아 다른 문자열로 바꾸는 함수이다.
+- 특정 문자열을 찾아 다른 문자열로 바꾸는 함수입니다.
 
 * * *
 
