--- a/_posts/Gitlab/2024-10-31-[Gitlab] - 작업 되돌리는 방법.md
+++ b/_posts/Gitlab/2024-10-31-[Gitlab] - 작업 되돌리는 방법.md
@@ -9,7 +9,7 @@ image: /assets/img/post-title/gitLab-wallpaper.jpg
 
 ## git revert :
 - 지정된 커밋의 변경 사항을 취소하는 새로운 커밋을 생성합니다.
-- 원본 커밋을 변경하지 않고, 이전 상태로 되돌리는 변경 사항을 추가하는 방식이다.
+- 원본 커밋을 변경하지 않고, 이전 상태로 되돌리는 변경 사항을 추가하는 방식입니다.
 
 ```bash
 $ git revert [commit-hash]
