--- a/_posts/Linux/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.md
+++ b/_posts/Linux/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.md
@@ -15,12 +15,12 @@ image: /assets/img/post-title/linux-wallpaper.jpg
 
 ## 2. 메모리의 캐시 영역을 사용하는 이유 :
 - 디스크를 통해 파일을 읽고 쓸 때 속도가 느리기 때문에 메모리 캐싱 영역을 통해 보다 빠르게 파일을 읽고 쓸 수 있고,<br>
-시스템의 부하가 줄어들고 데이터 입출력 속도가 빠르기 때문이다.
+시스템의 부하가 줄어들고 데이터 입출력 속도가 빠르기 때문입니다.
 
 * * *
 
 ## 3. 버퍼와 캐시에 사용된 메모리를 지워야 하는 이유 :
-- 일반적으로 캐시는 느린 장치의 데이터를 빠른 장치에 임시로 보관해두고 사용하여 성능을 올리는 것이 목적이다.
+- 일반적으로 캐시는 느린 장치의 데이터를 빠른 장치에 임시로 보관해두고 사용하여 성능을 올리는 것이 목적입니다.
 - 메모리와 같은 빠른 장치는 공간이 한정되어 있기 때문에 모든 정보를 캐시할수 없기 때문에 캐시를 제거해야합니다.
 
 * * *
@@ -45,7 +45,7 @@ image: /assets/img/post-title/linux-wallpaper.jpg
 
 ### 4.3 Page Cache란? :
 - 저장 장치를 통해 한 번 읽어온 파일의 내용을 메모리에 저장합니다.
-- 여기서 Buffer 와 다른 점은 메타데이터를 저장하는 것이 아닌 파일의 내용을 저장한다는 점이다.
+- 여기서 Buffer 와 다른 점은 메타데이터를 저장하는 것이 아닌 파일의 내용을 저장한다는 점입니다.
 
 * * *
 
