--- a/_posts/Linux/2024-01-08-[Linux] - LVM 생성하기.md
+++ b/_posts/Linux/2024-01-08-[Linux] - LVM 생성하기.md
@@ -8,8 +8,8 @@ image: /assets/img/post-title/linux-wallpaper.jpg
 ---
 
 ## 1. LVM(Logical Volume Manager)란? :
-- 논리 볼륨 관리자라는 뜻으로, 우리가 사용하는 물리적인 디스크 여러개를 논리적인 디스크로 할당하여 유연하게 관리할 수 있게 해주는 기능이다.
-- Linux 환경에서 저장 공간(=하드 디스크)를 효과적으로 관리하기 위해 제공하는 제공되는 커널 기능이다.
+- 논리 볼륨 관리자라는 뜻으로, 우리가 사용하는 물리적인 디스크 여러개를 논리적인 디스크로 할당하여 유연하게 관리할 수 있게 해주는 기능입니다.
+- Linux 환경에서 저장 공간(=하드 디스크)를 효과적으로 관리하기 위해 제공하는 제공되는 커널 기능입니다.
 
 * * *
 
