--- a/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.md
+++ b/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.md
@@ -34,7 +34,7 @@ image: /assets/img/post-title/web-wallpaper.jpg
 * * *
 
 ### 2.3 정적페이지 단점 :
-- 저장된 정보만 보여주기 때문에 서비스가 한정적이다.
+- 저장된 정보만 보여주기 때문에 서비스가 한정적입니다.
 - 추가, 수정, 삭제 등의 작업을 서버에서 직접 다운받아 편집 후 업로드도 수정으로 해줘야 하기 때문에 관리자 힘들다.
 
 * * *
