게시물 존칭으로 변경

--- a/_posts/Bash/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.md
+++ b/_posts/Bash/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.md
@@ -9,7 +9,7 @@ image: /assets/img/post-title/bash-wallpaper.jpg
 
 
 ## 1. 리다이렉션 기호를 알고싶었던 계기 :
-- 스크립트 실행에 대한 결과를 직접 파일에 들어가서 보는게 아닌 텍스트 파일로 저장해놓고 윈도우도 볼 수 있었으면 해서 찾아보다 리다이렉션 기호를 알게되었고, 한번 알아두면 좋을거 같아서 작성하게되었다.
+- 스크립트 실행에 대한 결과를 직접 파일에 들어가서 보는게 아닌 텍스트 파일로 저장해놓고 윈도우도 볼 수 있었으면 해서 찾아보다 리다이렉션 기호를 알게되었고, 한번 알아두면 좋을거 같아서 작성하게되었습니다.
 
 * * *
 
