--- a/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.md
+++ b/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.md
@@ -8,7 +8,7 @@ image: /assets/img/post-title/web-wallpaper.jpg
 ---
 
 ## 1. 정적페이지와 동적페이지에 대해 알고 싶었던 계기 :
-- WEB과 WAS 기능에 대해서 정리를 하다보니, 페이지 요청에 따라서 정적 페이지와 동적 페이지를 제공한다고 하는데 무슨 말인지 몰라 작성하게되었다.
+- WEB과 WAS 기능에 대해서 정리를 하다보니, 페이지 요청에 따라서 정적 페이지와 동적 페이지를 제공한다고 하는데 무슨 말인지 몰라 작성하게되었습니다.
 
 * * *
 
