--- a/_posts/Test/2023-01-31-[TEST] - TDD란.md
+++ b/_posts/Test/2023-01-31-[TEST] - TDD란.md
@@ -8,7 +8,7 @@ image: /assets/img/post-title/tdd-wallpaper.jpg
 ---
 
 ## 1. TDD를 알고싶었던 계기 :
-- IAC를 공부하는 과정에서 우연히 TDD라는 단어를 보게되어 검색하였더니 개발소스 테스트 관련된 사항이라 알아야할 거 같아 작성하게되었다.
+- IAC를 공부하는 과정에서 우연히 TDD라는 단어를 보게되어 검색하였더니 개발소스 테스트 관련된 사항이라 알아야할 거 같아 작성하게되었습니다.
 
 * * *
 
