게시물 존칭으로 변경

--- a/_posts/Linux/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.md
+++ b/_posts/Linux/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.md
@@ -8,7 +8,7 @@ image: /assets/img/post-title/linux-wallpaper.jpg
 ---
 
 ## 1. 리눅스 메모리 캐시 삭제를 알고 싶었던 계기 :
-- 엔지니어 일을 하면서 자사품이 설치된 서버를 정기적으로 점검을 하면서 메모리 확인을 하는데 **가끔 free 부분에 G가 아닌 M로 되어있는경우**들이 있어 서버 메모리 용량을 높이기 위해 캐시 삭제를 했다.
+- 엔지니어 일을 하면서 자사품이 설치된 서버를 정기적으로 점검을 하면서 메모리 확인을 하는데 **가끔 free 부분에 G가 아닌 M로 되어있는경우**들이 있어 서버 메모리 용량을 높이기 위해 캐시 삭제를 했습니다.
   하지만 그냥 인터넷에 검색해서 지우기만 했지 왜 지워야하는지에 대해서는 알지도 못하고 있다가 고객사 담당자분께서 지운이유에 대해서 문의하셔서 이참에 블로그에 작성하는게 좋겠다 싶어 작성하였다.
 
 * * *
