--- a/_posts/Vue/2022-07-05-[Vue] - 프로젝트 만들기.md
+++ b/_posts/Vue/2022-07-05-[Vue] - 프로젝트 만들기.md
@@ -10,7 +10,7 @@ image: /assets/img/post-title/vue-wallpaper.jpg
 ## 1. Vue 프로젝트 만들기:
 ### 1.1 환경 세팅하기 :
 
-- 필자는 Visual Studio Code를 사용했다.
+- 필자는 Visual Studio Code를 사용했습니다.
   
 ![텍스트](/assets/img/post/Vue/vscode%20%EC%84%A4%EC%B9%98%20%ED%9B%84%20%ED%99%94%EB%A9%B4.PNG)
 > * [Visual Studio Code 설치하기](https://code.visualstudio.com/ "vscode 설치")
@@ -33,7 +33,7 @@ $ vue create 프로젝트명
 $ vue init webpack 프로젝트명
 ```
 
-> 필자는 vue/cli 3.x 미만으로 생성했다.
+> 필자는 vue/cli 3.x 미만으로 생성했습니다.
 {: .prompt-info}
 
 - 실행하게 되면 프로젝트 생성하는 과정은 아래와 같습니다.
