게시물 존칭으로 변경

--- a/_posts/DB/2022-10-14-[DB] - Join이란.md
+++ b/_posts/DB/2022-10-14-[DB] - Join이란.md
@@ -46,7 +46,7 @@ ON A.DATA = B.DATA;
 - 왼쪽 외부 조인(OUTER JOIN)은 왼쪽 테이블을 기준으로 결합하는 조인방식입니다.
 
 [![텍스트](/assets/img/post/DB/%EC%99%BC%EC%AA%BD%20%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)](/assets/img/post/DB/%EC%99%BC%EC%AA%BD%20%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)
-- 오른쪽 테이블에 일치하는 값이 없어도 왼쪽 테이블의 데이터는 모두 추출된다.
+- 오른쪽 테이블에 일치하는 값이 없어도 왼쪽 테이블의 데이터는 모두 추출됩니다.
 - 왼쪽 외부 조인(OUTER JOIN)을 하는 코드는 아래와 쿼리결과에 대한 예시는 같습니다.
 
 ```sql
@@ -63,7 +63,7 @@ ON A.DATA = B.DATA;
 - 오른쪽 외부 조인(RIGHT OUTER JOIN)은 왼쪽 테이블을 기준으로 결합하는 조인방식입니다.
 
 [![텍스트](/assets/img/post/DB/%EC%98%A4%EB%A5%B8%EC%AA%BD%20%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)](/assets/img/post/DB/%EC%98%A4%EB%A5%B8%EC%AA%BD%20%EC%99%B8%EB%B6%80%EC%A1%B0%EC%9D%B8%20%EA%B7%B8%EB%A6%BC.PNG)
-- 왼쪽 테이블에 일치하는 값이 없어도 오른쪽 테이블의 데이터는 모두 추출된다.
+- 왼쪽 테이블에 일치하는 값이 없어도 오른쪽 테이블의 데이터는 모두 추출됩니다.
 - 오른쪽 외부 조인(RIGHT OUTER JOIN)을 하는 코드와 쿼리결과에 대한 예시는 아래와 같습니다.
 
 ```sql
