--- a/_posts/DB/2023-02-12-[DB] - 인덱스란.md
+++ b/_posts/DB/2023-02-12-[DB] - 인덱스란.md
@@ -15,7 +15,7 @@ image: /assets/img/post-title/db-wallpaper.jpg
 ## 2. 데이터베이스 인덱스(Index)란? :
 - 추가적인 쓰기 작업과 저장 공간을 활용하여 데이터베이스 테이블의 검색 속도를 향상시키기 위한 자료구조입니다.
 - 인덱스 생성 시 데이터를 오름차순으로 정렬하기 때문에 정렬된 주소체계라고 표현할 수 있습니다.
-- 특정 컬럼에 인덱스를 생성하면, 해당 컬럼의 데이터들을 정렬하여 별도의 메모리 공간에 데이터의 물리적 주소와 함께 저장된다.
+- 특정 컬럼에 인덱스를 생성하면, 해당 컬럼의 데이터들을 정렬하여 별도의 메모리 공간에 데이터의 물리적 주소와 함께 저장됩니다.
 
 * * *
 
@@ -28,6 +28,6 @@ image: /assets/img/post-title/db-wallpaper.jpg
 ### 3.2 정렬 ORDER BY 절의 효율성
 
 ### 3.3 MIN(최소), MAX(최대)의 효율적인 처리가 가능
-- 데이터가 이미 정렬되어 있어 MIN(최소), MAX(최대)의 값만 가져와 정렬하면된다.
+- 데이터가 이미 정렬되어 있어 MIN(최소), MAX(최대)의 값만 가져와 정렬하면됩니다.
 
 * * *
