--- a/_posts/DB/2023-03-09-[DB] - DB데이터 특정 문자열 바꾸기.md
+++ b/_posts/DB/2023-03-09-[DB] - DB데이터 특정 문자열 바꾸기.md
@@ -51,7 +51,7 @@ FROM
 * * *
 
 ## 3. TRANSLATE란? :
-- 대상문자와 변환문자는 1:1로 변환이되며, 대상문자에는 있는데 변환문자에는 없으면 해당 문자는 제거된다.
+- 대상문자와 변환문자는 1:1로 변환이되며, 대상문자에는 있는데 변환문자에는 없으면 해당 문자는 제거됩니다.
 
 * * *
 
