--- a/_posts/Gitlab/2024-10-31-[Gitlab] - 로컬 브랜치와 원격 브랜치.md
+++ b/_posts/Gitlab/2024-10-31-[Gitlab] - 로컬 브랜치와 원격 브랜치.md
@@ -47,7 +47,7 @@ git push origin --delete [브랜치 이름]  # 원격 브랜치 삭제
 - GitHub, GitLab, Bitbucket과 같은 원격 저장소 서버에 저장된 브랜치이고, 여러 개발자가 함께 작업할 수 있도록 공유된 코드 상태를 유지합니다.
 
 ### 표기 방식 :
-- 원격 브랜치는 일반적으로 origin/main, origin/feature-x처럼 원격 저장소 이름(origin)과 브랜치 이름이 /로 구분되어 표기된다.
+- 원격 브랜치는 일반적으로 origin/main, origin/feature-x처럼 원격 저장소 이름(origin)과 브랜치 이름이 /로 구분되어 표기됩니다.
 
 * * *
 
