--- a/_posts/Linux/2024-01-08-[Linux] - LVM 생성하기.md
+++ b/_posts/Linux/2024-01-08-[Linux] - LVM 생성하기.md
@@ -33,7 +33,7 @@ image: /assets/img/post-title/linux-wallpaper.jpg
 * 볼륨 그룹 / VG(Volume Group)
   - PV들이 모여서 생성되는 단위
   - 물리볼륨을 합쳐서 1개의 물리 그룹으로 만드는것
-  - 사용자는 VG를 원하는대로 쪼개서 LV로 만들게 된다.
+  - 사용자는 VG를 원하는대로 쪼개서 LV로 만들게 됩니다.
 
 * 논리적 볼륨 / LV(Logical Volume)
   - 사용자가 최종적으로 사용하는 단위로, VG에서 필요한 크기로 할당받아 LV를 생성
