--- a/_posts/Markdown/2022-08-18-[MarkDown] - 마크다운 사용법 .md
+++ b/_posts/Markdown/2022-08-18-[MarkDown] - 마크다운 사용법 .md
@@ -86,7 +86,7 @@ _You **can** ~~combine~~ them_
 * * *
 
 #### 1.2.5 목록(List) :
-- '<ol>', '<ul>' 목록 태그로 변환된다.
+- '<ol>', '<ul>' 목록 태그로 변환됩니다.
 
 ```
 1. 순서가 필요한 목록
