--- a/_posts/API/2022-08-19-[API] - API란.md
+++ b/_posts/API/2022-08-19-[API] - API란.md
@@ -27,7 +27,7 @@ image: /assets/img/post-title/api-wallpaper.jpg
 - API의 접근 방식에는 크게 세가지가 존재합니다.
   - Private API : API를 기업이나 연구 단체 등에서 사용하는 다양한 애플리케이션과 시스템의 통합을 위해 사용하는 것으로 단체 내부에서만 사용할 수 있도록 합니다.
   - Partner API : API를 특정 비즈니스 파트너와 공유하는 것으로, 공유받은 API를 품질 저하 없이 사용할 수 있으며 수익 창출을 목표로 사용합니다.
-  - Public API (openAPI) : 모든 사람들에게 API를 제공하는 것으로, 개인이 API와 상호작용하는 프로그램을 무료로 개발할 수 있습니다. <br>다양한 아이디어를 통해 혁신적인 프로그램의 등장을 목표로 사용된다.
+  - Public API (openAPI) : 모든 사람들에게 API를 제공하는 것으로, 개인이 API와 상호작용하는 프로그램을 무료로 개발할 수 있습니다. <br>다양한 아이디어를 통해 혁신적인 프로그램의 등장을 목표로 사용됩니다.
 
 * * *
 
