--- a/_posts/Linux/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.md
+++ b/_posts/Linux/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.md
@@ -50,7 +50,7 @@ image: /assets/img/post-title/linux-wallpaper.jpg
 * * *
 
 ### 4.4 slab란? :
-- 커널 내부에서 사용하는 메모리, 캐시라고 생각하면 된다.
+- 커널 내부에서 사용하는 메모리, 캐시라고 생각하면 됩니다.
 
 * * *
 
