--- a/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.md
+++ b/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.md
@@ -20,7 +20,7 @@ image: /assets/img/post-title/web-wallpaper.jpg
 ### 2.1 정적페이지란? :
 - 웹 서버에 이미 저장된 HTML 문서를 클라이언트에게 전송하는 웹 페이지
 - 사용자는 서버에 저장된 데ㅣ터가 변경되지 않는 한 고정된 웹 페이지를 보게됩니다.
-- 모든 사용자는 같은 결과의 웹 페이지를 서버에 요청하고 응답 받는다.<br>
+- 모든 사용자는 같은 결과의 웹 페이지를 서버에 요청하고 응답 받습니다.<br>
 
 > EX) : 홈페이지에 회사소개, 포트폴리오 등 내용이 변하지 않고 고정적인 페이지
 {: .prompt-example}
