nexus repo  url 변경

--- a/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
+++ b/_posts/DevOps/2026-01-05-[Devops] - CI 환경 구성하기.md
@@ -313,15 +313,16 @@ ENTRYPOINT ["java","-jar","/app/app.jar"]
 |        Key          |  Value  |  설명   |
 |:-------------------:|:-------:|:---------------:|
 | CI_CA_CERT          | `-----BEGIN CERTIFICATE-----`<br>`MIIFhzCC...`<br>`-----END CERTIFICATE-----` | ROOT_CA.CRT |
+
 | HARBOR_PASS         | qwe1212!Q         | HARBOR_PASSWORD     |
 | HARBOR_PROJECT      | pipeline          | HARBOR_PROJECT_NAME |
 | HARBOR_REGISTRY     | harbor.test.com   | HARBOR_URL          |
 | HARBOR_USER         | admin             | HARBOR_USERNAME     |
-| MANIFEST_REPO_PATH  | test/dev-manifest | GITLAB_MANIFEST_REPO_PATH    |
+| MANIFEST_REPO_PATH  | test/dev-manifest | GITLAB_MANIFEST_REPO_PATH |
 | MANIFEST_REPO_TOKEN | glpat-gQ4KNJFzk... | GITLAB_ACCESS_TOKEN |
 | MANIFEST_REPO_URL   | gitlab.test.com   | GITLAB_URL          |
 | MANIFEST_REPO_USER  | root | GITLAB_USERNAME     |
-| NEXUS_MIRROR_URL    | nexus.test.com | NEXUS_REPO_URL      |
+| NEXUS_MIRROR_URL    | http://nexus.test.com:8081/repository/maven-public/ | NEXUS_REPO_URL |
 
 ![CI 파이프라인 환경변수 등록 1](/assets/img/post/devops/CI%20파이프라인%20환경변수%20등록%201.png)
 ![CI 파이프라인 환경변수 등록 2](/assets/img/post/devops/CI%20파이프라인%20환경변수%20등록%202.png)
